# Legal_Mind

./: .env.example  .gitignore  ENHANCEMENT_SUMMARY.md  GROQ_INTEGRATION.md  MODEL_COMPARISON_GUIDE.md  QUICK_START.md  README.md  api.py  app.py  app_backup.py  create_short_sample.py  document_processor.py  legal_analyzer.py  pyproject.toml  report_generator.py  sample_contract.py  sample_employment_agreement.docx  sample_legal_contract.docx  short_test_contract.docx  utils.py
frontend/: .env.local.example  .gitignore  README.md  globals.css  next.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analyze/: page.tsx
frontend/components/analysis/: AnalysisResults.tsx  ComparisonResults.tsx  DocumentUpload.tsx
frontend/components/layout/: Footer.tsx  Navbar.tsx
frontend/components/sections/: Features.tsx  Hero.tsx
frontend/services/: api.ts
frontend/types/: index.ts
