[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.63.0",
    "docx>=0.2.4",
    "google-generativeai>=0.8.5",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
    "plotly>=6.3.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.48.0",
]
